# Ai-Bootcamp

./: README.md
z1/: matmul.py  mc.py  pyproject.toml
z2/: MLP2.py  dataset.csv  df_preproc.csv  dresden_filtered_weather_data.csv  dresden_weather_prediction_model.pth  hello.py  mlp.py  pyproject.toml  test.py  z1.py
