[tool.poetry]
name = "z2"
version = "0.1.0"
description = ""
authors = ["Mateusz Kurowski <mateusz.kurowski28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
polars = "^1.16.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
rich = "^13.9.4"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
